--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,10 +30,11 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
 
-    compile 'com.android.support:appcompat-v7:23.2.1'
+
+    compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.google.android.gms:play-services-gcm:8.4.0'
     compile 'com.google.android.gms:play-services:8.4.0'
-    compile 'com.android.support:design:23.2.1'
+    compile 'com.android.support:design:23.3.0'
     compile 'com.vlonjatg.android:app-tour:1.0'
-
+    compile 'com.android.support:support-v4:23.3.0'
 }
