--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,11 @@
 
 
         </activity>
+        <activity android:name=".MyBike">
+
+
+        </activity>
+
 
         <activity android:name=".quiz.QuizStarter">
 
