--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+
+    <permission android:name="android.permission.CALL_PHONE"/>
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
 
@@ -54,9 +56,12 @@
 
 
 
-        <activity android:name=".FirstActivity"
-                  android:screenOrientation="portrait">
-
+        <activity
+            android:name=".FirstActivity"
+            android:screenOrientation="portrait">
+            <!--<intent-filter>
+                <action android:name="android.intent.action.DIAL" />
+            </intent-filter>-->
 
         </activity>
 
